basis grijs site

--- a/index.html
+++ b/index.html
@@ -8,19 +8,45 @@
 </head>
 <body>
     <header>
-        <img href="" alt="pxl logo">
+        <img id="pxl_logo" src="assets/logo_pxl_bol.png" alt="pxl logo">
         <div id="titelDescription">
             <h1>MOTION DESIGN PE</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae facere iste quaerat, quo nesciunt, debitis possimus porro exercitationem mollitia, perferendis harum minima autem pariatur veniam cum saepe eum sint eaque!</p>
         </div>
     </header>
     <main>
-        <div id="vakken">
-            <div id="motion">
-                <img>
-                <p>Motion Design</p>
+        <section id="vakken">
+            <div id="motion" class="vak"></div>
+            <div id="column2">
+                <div id="column2row1">
+                    <div id="wpl3" class="vak"></div>
+                    <div id="ux2" class="vak"></div>
+                </div>
+                <div id="webExpert1" class="vak"></div>
             </div>
-        </div>
+            <div id="column3">
+                <div id="dataVis" class="vak"></div>
+                <div id="projMan" class="vak"></div>
+            </div>
+        </section>
+        <section id="aboutMe">
+            <div id="imageDiv">
+                <img src="assets/jam jar.jpg" alt="photo of me">
+            </div>
+            <div id="aboutMeDescription">
+                <h1>IBEN FRANS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt iusto asperiores expedita rerum quidem. Placeat qui tenetur iusto eius hic necessitatibus at.</p>
+                <button>Contact me</button>
+            </div>
+        </section>
+        <section id="myWork">
+            <h2>MY WORK</h2>
+            <div id="works">
+                <div id="art1" class="work"></div>
+                <div id="art2" class="work"></div>
+                <div id="art3" class="work"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
